--- a/app/src/main/res/layout/activity_learing_clock.xml
+++ b/app/src/main/res/layout/activity_learing_clock.xml
@@ -9,7 +9,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="18">
+        android:layout_weight="12">
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/Life_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="6"
+        android:weightSum="10"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/heart1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:src="@drawable/heart"/>
+        <ImageView
+            android:id="@+id/heart2"
+            android:layout_width="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:src="@drawable/heart"/>
+        <ImageView
+            android:id="@+id/heart3"
+            android:layout_width="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:src="@drawable/heart"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="horizontal">
     </LinearLayout>
     <LinearLayout
         android:id="@+id/ClockImg_layout"
@@ -17,31 +55,49 @@
         android:layout_height="0dp"
         android:layout_weight="28"
         android:gravity="center"
+        android:weightSum="100"
         android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="bottom"
+            android:weightSum="100"
+            android:layout_weight="25">
+            <ImageView
+                android:id="@+id/cat1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:src="@drawable/cat_1"
+                android:layout_weight="65"/>
+        </LinearLayout>
+
+
         <com.lovehp30.easyclocklearningapp.ClockView
             android:id="@+id/clockBoard"
-            android:layout_width="250dp"
+            android:layout_width="0dp"
+            android:layout_weight="50"
             android:layout_height="match_parent"
             />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="bottom"
+            android:weightSum="100"
+            android:layout_weight="25">
+            <ImageView
+                android:id="@+id/cat2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:src="@drawable/cat_1"
+                android:layout_weight="65"/>
+        </LinearLayout>
+
+
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="5">
-    </LinearLayout>
+
 <!--    &#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:layout_weight="9">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#ABC"
-            android:textSize="30dp"
-            android:text="What time is it?"/>
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -59,6 +115,7 @@
             android:id="@+id/answer1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:onClick="clickBtnEvent"
             android:layout_weight="35"/>
         <LinearLayout
             android:layout_width="0dp"
@@ -67,6 +124,7 @@
         <Button
             android:id="@+id/answer2"
             android:layout_width="0dp"
+            android:onClick="clickBtnEvent"
             android:layout_height="match_parent"
             android:layout_weight="35"/>
     </LinearLayout>
